# beamr

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
crates/beamer/: Cargo.toml
crates/beamer-au/: BUFFER_STORAGE_OPTIMIZATION.md  Cargo.toml  README.md  build.rs
crates/beamer-au/objc/: BeamerAuBridge.h  BeamerAuWrapper.h  BeamerAuWrapper.m
crates/beamer-au/src/: audio_unit.rs  bridge.rs  buffer_storage.rs  buffers.rs  bus_config.rs  config.rs  error.rs  error_helpers.rs  export.rs  factory.rs  instance.rs  ivar_arc.rs  lib.rs  lifecycle.rs  midi.rs  objc_block.rs  parameters.rs  processor.rs  render.rs  sysex_pool.rs  transport.rs
crates/beamer-core/: Cargo.toml  README.md
crates/beamer-core/src/: buffer.rs  bypass.rs  config.rs  editor.rs  error.rs  fnv.rs  lib.rs  midi.rs  midi_cc_config.rs  midi_cc_state.rs  midi_params.rs  param_format.rs  param_range.rs  param_types.rs  parameter_format.rs  parameter_groups.rs  parameter_info.rs  parameter_range.rs  parameter_store.rs  parameter_types.rs  parameters.rs  params.rs  plugin.rs  process_context.rs  sample.rs  smoothing.rs  types.rs
crates/beamer-macros/: Cargo.toml  README.md
crates/beamer-macros/src/: codegen.rs  enum_param.rs  enum_parameter.rs  has_parameters.rs  has_params.rs  ir.rs  lib.rs  parse.rs  range_eval.rs  validate.rs
crates/beamer-utils/: Cargo.toml  README.md
crates/beamer-utils/src/: hash.rs  lib.rs
crates/beamer-vst3/: Cargo.toml  README.md
crates/beamer-vst3/src/: export.rs  factory.rs  lib.rs  processor.rs  wrapper.rs
crates/beamer/src/: lib.rs
crates/beamr/: Cargo.toml
crates/beamr-core/: Cargo.toml
crates/beamr-core/src/: buffer.rs  bypass.rs  error.rs  lib.rs  midi.rs  param_format.rs  param_range.rs  param_types.rs  params.rs  plugin.rs  sample.rs  smoothing.rs  types.rs
crates/beamr-macros/: Cargo.toml
crates/beamr-macros/src/: codegen.rs  enum_param.rs  fnv.rs  ir.rs  lib.rs  parse.rs
crates/beamr-vst3/: Cargo.toml
crates/beamr-vst3/src/: export.rs  lib.rs  processor.rs  util.rs  wrapper.rs
crates/beamr/src/: lib.rs
docs/: AU_ARCHITECTURE_REVIEW.md  AU_CRASH_ANALYSIS.md  AU_HYBRID_TODO.md  AU_SUPPORT_ANALYSIS.md  CLAP_SUPPORT_ANALYSIS.md  DESIGN_COMBINED_PLUGIN_MACRO.md  EXAMPLE_COVERAGE.md  HYBRID_AU_IMPLEMENTATION_PLAN.md  REFERENCE.md  ROADMAP_MULTI_FORMAT.md  TODO_AU_SUPPORT.md  TODO_FORMAT_AGNOSTIC_REFACTOR.md  WEBVIEW_PHASE1.md  WEBVIEW_PHASE2A.md  WEBVIEW_ROADMAP.md
examples/: README.md
examples/br-gain/: Cargo.toml
examples/br-gain/src/: lib.rs
examples/br-gain/ui/: index.html
examples/br-midi-transform/: Cargo.toml
examples/br-midi-transform/src/: lib.rs
examples/compressor/: Cargo.toml
examples/compressor/src/: lib.rs
examples/delay/: Cargo.toml
examples/delay/src/: lib.rs
examples/gain/: Cargo.toml
examples/gain/src/: lib.rs
examples/midi-transform/: Cargo.toml
examples/midi-transform/src/: lib.rs
examples/synth/: Cargo.toml
examples/synth/src/: lib.rs
xtask/src/: main.rs
