[workspace]
members = [
    "crates/beamer-core",
    "crates/beamer-vst3",
    "crates/beamer-macros",
    "crates/beamer",
    "examples/gain",
    "examples/midi-transform",
    "examples/delay",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/helpermedia/beamer"

[workspace.dependencies]
vst3 = "0.3"
log = "0.4"

# Proc-macro dependencies
syn = { version = "2", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Internal crates
beamer-core = { version = "0.1.1", path = "crates/beamer-core" }
beamer-vst3 = { version = "0.1.1", path = "crates/beamer-vst3" }
beamer-macros = { version = "0.1.1", path = "crates/beamer-macros" }
beamer = { version = "0.1.1", path = "crates/beamer" }

[profile.release]
lto = true
codegen-units = 1
strip = true
