[package]
name = "beamer-au"
version = "0.1.6"
edition = "2021"
description = "Audio Unit (AUv3) support for Beamer audio plugin framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/helpermedia/beamer"
keywords = ["audio", "plugin", "au", "audiounit", "music"]
categories = ["multimedia::audio"]

[features]
default = []
sysex-heap-fallback = []

[build-dependencies]
cc = "1.0"

[dependencies]
beamer-core = { path = "../beamer-core" }
log = { workspace = true }

# Note: The hybrid ObjC/Rust AU architecture uses native Objective-C (BeamerAuWrapper.m)
# for AUAudioUnit subclassing, with a C-ABI bridge to Rust. This avoids the need for
# objc2/block2 crates which had issues with AUAudioUnit subclassing.
