[package]
name = "beamer-core"
description = "Core abstractions for the Beamer VST3 WebView framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# SysEx buffer size options (default is 512 bytes)
sysex-256 = []
sysex-1024 = []
sysex-2048 = []

[dependencies]
# Internal utilities crate (zero external deps)
beamer-utils.workspace = true
