[package]
name = "beamer-macros"
description = "Derive macros for the Beamer VST3 framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
beamer-utils = { workspace = true }
