[package]
name = "beamr"
description = "VST3 framework for Rust - convenience re-exports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["derive"]
derive = ["beamr-macros"]

[dependencies]
beamr-core = { workspace = true }
beamr-vst3 = { workspace = true }
beamr-macros = { workspace = true, optional = true }
